src/styles.scss
/* You can add global styles to this file, and also import other style files */

html,
body {
  background-color: rgb(37, 35, 35);
  color: #fff;
  font-family: "Roboto", sans-serif;
  font-size: 16px;
}

.sidebar-dark {
  background-color: rgb(31, 31, 31);
  width: 22%;
  min-height: 100vh;
  position: fixed;
  margin: 0;
  transition: all 0.2s ease;
}

.main-content {
  padding: 3rem;
  margin-left: 22%;
}

.small-flag {
  width: 50px;
}


table {
  border-radius: 5px;
}

@media screen and (max-width: 992px) {
  .sidebar-dark {
    width: 31%;
  }
  .main-content {
    margin-left: 31%;
  }
}

@media screen and (max-width: 728px) {
  .mh-100vh {
    min-height: 200vh;
  }

  .sidebar-dark {
    visibility: hidden;
    width: 0%;
    .menu-item-dark {
      display: none;
    }
    &.active {
      visibility: visible;
      width: 80%;
      transform: translateX(0);
      .menu-item-dark {
        display: block;
      }
    }
  }

  .main-content {
    margin-top: 3rem;
    padding: 1rem;
    margin-left: 0;
  }
}

